--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,28 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.coordinatorlayout.widget.CoordinatorLayout
 		xmlns:android = "http://schemas.android.com/apk/res/android"
 		xmlns:tools = "http://schemas.android.com/tools"
 		android:layout_width = "match_parent"
 		android:layout_height = "match_parent"
-		android:background = "@drawable/round_back_white"
+		xmlns:app = "http://schemas.android.com/apk/res-auto"
+		android:background = "#c4c4c4"
 		tools:context = ".Home"
 		android:orientation = "vertical"
+		android:id="@+id/body_container"
 		>
 	
-	<ImageView
-			android:layout_height="150dp"
-			android:layout_width="300dp"
-			android:src="@drawable/splash"
-			android:layout_gravity="center"
-			android:adjustViewBounds="true"
-			android:layout_marginTop="160dp"/>
-	
-	<TextView
+	<com.google.android.material.bottomappbar.BottomAppBar
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_gravity="bottom"
+		android:background="@color/white"
+		android:id="@+id/bottomAppBar"
+		app:fabCradleRoundedCornerRadius="50dp"
+		app:fabCradleMargin="10dp"
+			>
+		
+		<com.google.android.material.bottomnavigation.BottomNavigationView
+				android:id="@+id/bottomNavigationView"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_gravity="center"
-			android:text="Welcome To You"
-			android:textSize="20sp"
-			android:layout_marginTop="30dp"/>
+			app:menu="@menu/bottom_menu"
+			android:background="@android:color/transparent"
+				android:layout_marginRight="20dp"
+				app:labelVisibilityMode="labeled"
+				app:itemIconTint="@color/bottom_item_background"
+				app:itemTextColor="@color/bottom_item_background"
+				/>
+	</com.google.android.material.bottomappbar.BottomAppBar>
+	
+	
+	<com.google.android.material.floatingactionbutton.FloatingActionButton
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:src="@drawable/ic_video"
+		app:maxImageSize="50dp"
+		android:backgroundTint="@color/white"
+		app:layout_anchor="@+id/bottomAppBar"/>
 
-  </LinearLayout>
+  </androidx.coordinatorlayout.widget.CoordinatorLayout>
